use virtual threads by default
remove auto build for 17

add more tests

remove 17 from e2e

update compiler veresion to 21

lower the upper bound of tests